--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer {
+    .no-scrollbar {
+        -webkit-scrollbar: none;
+        scrollbar-width: none;
+    }
+}
